--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Search Engine</h1>
+    <img src="{{ url_for('static', filename='logo.jpeg') }}" alt="Search Engine DSA">
 
     <div class="formdiv">
         <form action="/search" method="post">
