--- a/templates/index.html
+++ b/templates/index.html
@@ -1,26 +1,30 @@
+<!-- templates/index.html -->
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search Engine</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
+    <title>Googler</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.css' integrity='sha512-tx5+1LWHez1QiaXlAyDwzdBTfDjX07GMapQoFTS74wkcPMsI3So0KYmFe6EHZjI8+eSG0ljBlAQc3PQ5BTaZtQ==' crossorigin='anonymous'/>
 </head>
-
 <body>
-    <img src="{{ url_for('static', filename='logo.jpeg') }}" alt="Search Engine DSA">
-
-    <div class="formdiv">
-        <form action="/search" method="post">
-            <input type="text" name="query" placeholder="Enter your query">
-            <button type="submit">Search</button>
-        </form>
-        <form action="/upload" method="post" enctype="multipart/form-data">
-            <input type="file" name="files" multiple>
-            <button type="submit">Add Documents</button>
-        </form>
+    <h1>Googler</h1>
+    <form action="{{ url_for('search') }}" method="post">
+        <input type="text" name="query" placeholder="Search">
+        <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+    </form>
+    <div id="results">
+        {% if results %}
+            <h2>Search Results:</h2>
+            <ul>
+                {% for doc_id,doc_url in results.items() %}
+                    <div class="li">
+                        <p><a href="{{ doc_url }}" target="_blank">{{ doc_url }}</a></p> <!-- docURL -->
+                    </div>
+                {% endfor %}
+            </ul>
+        {% endif %}
     </div>
 </body>
-
 </html>
