--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,10 @@
         <input type="text" name="query" placeholder="Search">
         <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
     </form>
+    <form action="/upload" method="post" enctype="multipart/form-data">
+        <input type="file" name="document" accept=".pdf, .doc, .docx, .json">
+        <button class="upload-btn" type="submit"><i class="fa-solid fa-upload"></i></button>
+    </form>
     <div id="results">
         {% if results %}
             <h2>Search Results:</h2>
